--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -11,13 +11,22 @@
 name: Build OpenWrt
 
 on:
-  repository_dispatch:
-  workflow_dispatch:
-    inputs:
-      ssh:
-        description: 'SSH connection to Actions'
-        required: false
-        default: 'false'
+  push:
+    branches: 
+      - master
+#  release:
+#    types: published
+  schedule:
+    - cron: 0 21 * * *
+#   watch:
+#     types: started
+#  repository_dispatch:
+#   workflow_dispatch:
+#     inputs:
+#       ssh:
+#         description: 'SSH connection to Actions'
+#         required: false
+#         default: 'false'
 
 env:
   REPO_URL: https://github.com/immortalwrt/immortalwrt.git
