--- a/.config
+++ b/.config
@@ -20,91 +20,48 @@ CONFIG_LIBCURL_UNIX_SOCKETS=y
 # CONFIG_PACKAGE_adbyby is not set
 # CONFIG_PACKAGE_autosamba is not set
 CONFIG_PACKAGE_bash=y
-# CONFIG_PACKAGE_boost-date_time is not set
-CONFIG_PACKAGE_chinadns-ng=y
 CONFIG_PACKAGE_coreutils-nohup=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4=y
-# CONFIG_PACKAGE_dns2socks is not set
 CONFIG_PACKAGE_gowebdav=y
 CONFIG_PACKAGE_hd-idle=y
-# CONFIG_PACKAGE_ipt2socks is not set
-# CONFIG_PACKAGE_ipt2socks-alt is not set
-# CONFIG_PACKAGE_iptables-mod-ipsec is not set
-CONFIG_PACKAGE_iputils-arping=y
-CONFIG_PACKAGE_kcptun-client=y
-# CONFIG_PACKAGE_kmod-crypto-cbc is not set
-# CONFIG_PACKAGE_kmod-crypto-deflate is not set
-# CONFIG_PACKAGE_kmod-crypto-des is not set
-# CONFIG_PACKAGE_kmod-crypto-echainiv is not set
-# CONFIG_PACKAGE_kmod-crypto-hmac is not set
-# CONFIG_PACKAGE_kmod-crypto-md5 is not set
-# CONFIG_PACKAGE_kmod-crypto-rng is not set
-# CONFIG_PACKAGE_kmod-crypto-sha256 is not set
-# CONFIG_PACKAGE_kmod-crypto-wq is not set
-# CONFIG_PACKAGE_kmod-ipsec is not set
-# CONFIG_PACKAGE_kmod-ipt-ipsec is not set
-# CONFIG_PACKAGE_kmod-iptunnel6 is not set
 # CONFIG_PACKAGE_kmod-tun is not set
 CONFIG_PACKAGE_libbz2=y
+CONFIG_PACKAGE_libcap=y
 CONFIG_PACKAGE_libcurl=y
-CONFIG_PACKAGE_libevent2=y
 CONFIG_PACKAGE_libexif=y
 CONFIG_PACKAGE_libffmpeg-audio-dec=y
 CONFIG_PACKAGE_libflac=y
 CONFIG_PACKAGE_libid3tag=y
 CONFIG_PACKAGE_libjpeg-turbo=y
-CONFIG_PACKAGE_libmaxminddb=y
 # CONFIG_PACKAGE_libminiupnpc is not set
 # CONFIG_PACKAGE_libnatpmp is not set
-# CONFIG_PACKAGE_libnss is not set
 CONFIG_PACKAGE_libogg=y
 CONFIG_PACKAGE_libopenldap=y
 CONFIG_PACKAGE_libreadline=y
 CONFIG_PACKAGE_libsasl2=y
 CONFIG_PACKAGE_libvorbis=y
 CONFIG_PACKAGE_libwebsockets-full=y
-CONFIG_PACKAGE_lua-maxminddb=y
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
-CONFIG_PACKAGE_luci-app-bypass=y
-CONFIG_PACKAGE_luci-app-dnsfilter=y
 CONFIG_PACKAGE_luci-app-gowebdav=y
 CONFIG_PACKAGE_luci-app-hd-idle=y
-# CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
 CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 CONFIG_PACKAGE_luci-app-minidlna=y
 # CONFIG_PACKAGE_luci-app-samba is not set
-CONFIG_PACKAGE_luci-app-serverchan=y
-# CONFIG_PACKAGE_luci-app-ssr-plus is not set
 CONFIG_PACKAGE_luci-app-ttyd=y
 # CONFIG_PACKAGE_luci-app-unblockmusic is not set
 CONFIG_PACKAGE_luci-app-unblockneteasemusic=y
 # CONFIG_PACKAGE_luci-app-zerotier is not set
-CONFIG_PACKAGE_luci-compat=y
 CONFIG_PACKAGE_luci-i18n-gowebdav-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-hd-idle-en=y
 CONFIG_PACKAGE_luci-i18n-hd-idle-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-minidlna-en=y
 CONFIG_PACKAGE_luci-i18n-minidlna-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
+CONFIG_PACKAGE_luci-theme-argon-light-mod=y
 CONFIG_PACKAGE_minidlna=y
-# CONFIG_PACKAGE_naiveproxy is not set
 CONFIG_PACKAGE_node-request=y
-# CONFIG_PACKAGE_nspr is not set
-CONFIG_PACKAGE_redsocks2=y
-# CONFIG_PACKAGE_resolveip is not set
 # CONFIG_PACKAGE_samba36-server is not set
-CONFIG_PACKAGE_shadowsocks-libev-ss-server=y
-# CONFIG_PACKAGE_shadowsocksr-libev-ssr-check is not set
-CONFIG_PACKAGE_simple-obfs-server=y
-CONFIG_PACKAGE_smartdns=y
-# CONFIG_PACKAGE_strongswan is not set
-# CONFIG_PACKAGE_trojan is not set
-CONFIG_PACKAGE_trojan-go=y
-CONFIG_PACKAGE_trojan-plus=y
 CONFIG_PACKAGE_ttyd=y
-CONFIG_PACKAGE_unzip=y
-CONFIG_PACKAGE_v2ray-plugin=y
 # CONFIG_PACKAGE_wsdd2 is not set
 # CONFIG_PACKAGE_zerotier is not set
-CONFIG_TROJAN_GO_COMPRESS_UPX=y
