--- a/.config
+++ b/.config
@@ -25,7 +25,17 @@ CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4=y
 CONFIG_PACKAGE_gowebdav=y
 CONFIG_PACKAGE_hd-idle=y
+# CONFIG_PACKAGE_iptables-mod-ipsec is not set
 CONFIG_PACKAGE_iputils-arping=y
+# CONFIG_PACKAGE_kmod-crypto-cbc is not set
+# CONFIG_PACKAGE_kmod-crypto-deflate is not set
+# CONFIG_PACKAGE_kmod-crypto-des is not set
+# CONFIG_PACKAGE_kmod-crypto-echainiv is not set
+# CONFIG_PACKAGE_kmod-crypto-hmac is not set
+# CONFIG_PACKAGE_kmod-crypto-md5 is not set
+# CONFIG_PACKAGE_kmod-ipsec is not set
+# CONFIG_PACKAGE_kmod-ipt-ipsec is not set
+# CONFIG_PACKAGE_kmod-iptunnel6 is not set
 # CONFIG_PACKAGE_kmod-tun is not set
 CONFIG_PACKAGE_libbz2=y
 CONFIG_PACKAGE_libcap=y
@@ -46,6 +56,7 @@ CONFIG_PACKAGE_libwebsockets-full=y
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
 CONFIG_PACKAGE_luci-app-gowebdav=y
 CONFIG_PACKAGE_luci-app-hd-idle=y
+# CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
 CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 CONFIG_PACKAGE_luci-app-minidlna=y
 # CONFIG_PACKAGE_luci-app-samba is not set
@@ -60,10 +71,11 @@ CONFIG_PACKAGE_luci-i18n-hd-idle-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-minidlna-en=y
 CONFIG_PACKAGE_luci-i18n-minidlna-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
-CONFIG_PACKAGE_luci-theme-argon-light-mod=m
+CONFIG_PACKAGE_luci-theme-argon-dark-mod=y
 CONFIG_PACKAGE_minidlna=y
 CONFIG_PACKAGE_node-request=y
 # CONFIG_PACKAGE_samba36-server is not set
+# CONFIG_PACKAGE_strongswan is not set
 CONFIG_PACKAGE_ttyd=y
 # CONFIG_PACKAGE_wsdd2 is not set
 # CONFIG_PACKAGE_zerotier is not set
