--- a/.config
+++ b/.config
@@ -24,6 +24,7 @@ CONFIG_PACKAGE_coreutils-nohup=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4=y
 CONFIG_PACKAGE_gowebdav=y
+CONFIG_PACKAGE_haproxy=y
 CONFIG_PACKAGE_hd-idle=y
 # CONFIG_PACKAGE_iptables-mod-ipsec is not set
 CONFIG_PACKAGE_iputils-arping=y
@@ -45,6 +46,8 @@ CONFIG_PACKAGE_libffmpeg-audio-dec=y
 CONFIG_PACKAGE_libflac=y
 CONFIG_PACKAGE_libid3tag=y
 CONFIG_PACKAGE_libjpeg-turbo=y
+CONFIG_PACKAGE_libltdl=y
+CONFIG_PACKAGE_liblua5.3=y
 # CONFIG_PACKAGE_libminiupnpc is not set
 # CONFIG_PACKAGE_libnatpmp is not set
 CONFIG_PACKAGE_libogg=y
@@ -59,8 +62,11 @@ CONFIG_PACKAGE_luci-app-hd-idle=y
 # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
 CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 CONFIG_PACKAGE_luci-app-minidlna=y
+CONFIG_PACKAGE_luci-app-passwall=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_GO=y
 # CONFIG_PACKAGE_luci-app-samba is not set
 CONFIG_PACKAGE_luci-app-serverchan=y
+# CONFIG_PACKAGE_luci-app-ssr-plus is not set
 CONFIG_PACKAGE_luci-app-ttyd=y
 # CONFIG_PACKAGE_luci-app-unblockmusic is not set
 CONFIG_PACKAGE_luci-app-unblockneteasemusic=y
@@ -75,7 +81,20 @@ CONFIG_PACKAGE_luci-theme-argon-dark-mod=y
 CONFIG_PACKAGE_minidlna=y
 CONFIG_PACKAGE_node-request=y
 # CONFIG_PACKAGE_samba36-server is not set
+CONFIG_PACKAGE_shadowsocks-libev-ss-server=y
 # CONFIG_PACKAGE_strongswan is not set
+CONFIG_PACKAGE_trojan-go=y
+CONFIG_PACKAGE_trojan-plus=y
 CONFIG_PACKAGE_ttyd=y
+CONFIG_PACKAGE_unzip=y
+CONFIG_PACKAGE_v2ray-plugin=y
 # CONFIG_PACKAGE_wsdd2 is not set
+CONFIG_PACKAGE_xray-geodata=y
 # CONFIG_PACKAGE_zerotier is not set
+CONFIG_TROJAN_GO_COMPRESS_UPX=y
+CONFIG_PACKAGE_boost-date_time=y
+CONFIG_PACKAGE_libnss=y
+CONFIG_PACKAGE_naiveproxy=y
+CONFIG_PACKAGE_nspr=y
+CONFIG_PACKAGE_shadowsocksr-libev-ssr-check=y
+CONFIG_PACKAGE_trojan=y
