--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -20,13 +20,13 @@ on:
     - cron: 0 21 * * *
   watch:
     types: started
-#  repository_dispatch:
-#   workflow_dispatch:
-#     inputs:
-#       ssh:
-#         description: 'SSH connection to Actions'
-#         required: false
-#         default: 'false'
+  repository_dispatch:
+  workflow_dispatch:
+    inputs:
+      ssh:
+        description: 'SSH connection to Actions'
+        required: true
+        default: 'true'
 
 env:
   REPO_URL: https://github.com/immortalwrt/immortalwrt.git
