--- a/.config
+++ b/.config
@@ -1,46 +1,19 @@
 CONFIG_TARGET_ipq40xx=y
 CONFIG_TARGET_ipq40xx_DEVICE_p2w_r619ac=y
 CONFIG_TARGET_BOARD="ipq40xx"
-CONFIG_LIBCURL_COOKIES=y
-CONFIG_LIBCURL_CRYPTO_AUTH=y
-CONFIG_LIBCURL_FILE=y
-CONFIG_LIBCURL_FTP=y
-CONFIG_LIBCURL_HTTP=y
-CONFIG_LIBCURL_LDAP=y
-CONFIG_LIBCURL_LDAPS=y
-CONFIG_LIBCURL_NGHTTP2=y
-CONFIG_LIBCURL_OPENSSL=y
-CONFIG_LIBCURL_PROXY=y
-CONFIG_LIBCURL_TFTP=y
-CONFIG_LIBCURL_THREADED_RESOLVER=y
-CONFIG_LIBCURL_TLS_SRP=y
-CONFIG_LIBCURL_UNIX_SOCKETS=y
-# CONFIG_PACKAGE_UnblockNeteaseMusic is not set
-# CONFIG_PACKAGE_UnblockNeteaseMusic-Go is not set
-# CONFIG_PACKAGE_adbyby is not set
+CONFIG_NODEJS_14=y
+CONFIG_NODEJS_ICU_SMALL=y
 # CONFIG_PACKAGE_autosamba is not set
-CONFIG_PACKAGE_bash=y
+# CONFIG_PACKAGE_boost-date_time is not set
 CONFIG_PACKAGE_coreutils-nohup=y
-CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4=y
 CONFIG_PACKAGE_gowebdav=y
 CONFIG_PACKAGE_haproxy=y
 CONFIG_PACKAGE_hd-idle=y
-# CONFIG_PACKAGE_iptables-mod-ipsec is not set
 CONFIG_PACKAGE_iputils-arping=y
-# CONFIG_PACKAGE_kmod-crypto-cbc is not set
-# CONFIG_PACKAGE_kmod-crypto-deflate is not set
-# CONFIG_PACKAGE_kmod-crypto-des is not set
-# CONFIG_PACKAGE_kmod-crypto-echainiv is not set
-# CONFIG_PACKAGE_kmod-crypto-hmac is not set
-# CONFIG_PACKAGE_kmod-crypto-md5 is not set
-# CONFIG_PACKAGE_kmod-ipsec is not set
-# CONFIG_PACKAGE_kmod-ipt-ipsec is not set
-# CONFIG_PACKAGE_kmod-iptunnel6 is not set
 # CONFIG_PACKAGE_kmod-tun is not set
+CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libbz2=y
-CONFIG_PACKAGE_libcap=y
-CONFIG_PACKAGE_libcurl=y
 CONFIG_PACKAGE_libexif=y
 CONFIG_PACKAGE_libffmpeg-audio-dec=y
 CONFIG_PACKAGE_libflac=y
@@ -51,24 +24,18 @@ CONFIG_PACKAGE_liblua5.3=y
 # CONFIG_PACKAGE_libminiupnpc is not set
 # CONFIG_PACKAGE_libnatpmp is not set
 CONFIG_PACKAGE_libogg=y
-CONFIG_PACKAGE_libopenldap=y
 CONFIG_PACKAGE_libreadline=y
-CONFIG_PACKAGE_libsasl2=y
+CONFIG_PACKAGE_libsqlite3=y
+CONFIG_PACKAGE_libuv=y
 CONFIG_PACKAGE_libvorbis=y
-CONFIG_PACKAGE_libwebsockets-full=y
-# CONFIG_PACKAGE_luci-app-adbyby-plus is not set
 CONFIG_PACKAGE_luci-app-gowebdav=y
 CONFIG_PACKAGE_luci-app-hd-idle=y
-# CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
 CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 CONFIG_PACKAGE_luci-app-minidlna=y
 CONFIG_PACKAGE_luci-app-passwall=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_GO=y
 # CONFIG_PACKAGE_luci-app-samba is not set
 CONFIG_PACKAGE_luci-app-serverchan=y
 # CONFIG_PACKAGE_luci-app-ssr-plus is not set
-CONFIG_PACKAGE_luci-app-ttyd=y
-# CONFIG_PACKAGE_luci-app-unblockmusic is not set
 CONFIG_PACKAGE_luci-app-unblockneteasemusic=y
 # CONFIG_PACKAGE_luci-app-zerotier is not set
 CONFIG_PACKAGE_luci-i18n-gowebdav-zh-cn=y
@@ -76,25 +43,25 @@ CONFIG_PACKAGE_luci-i18n-hd-idle-en=y
 CONFIG_PACKAGE_luci-i18n-hd-idle-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-minidlna-en=y
 CONFIG_PACKAGE_luci-i18n-minidlna-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 CONFIG_PACKAGE_luci-theme-argon-dark-mod=y
 CONFIG_PACKAGE_minidlna=y
+CONFIG_PACKAGE_node=y
 CONFIG_PACKAGE_node-request=y
 # CONFIG_PACKAGE_samba36-server is not set
-CONFIG_PACKAGE_shadowsocks-libev-ss-server=y
-# CONFIG_PACKAGE_strongswan is not set
-CONFIG_PACKAGE_trojan-go=y
+# CONFIG_PACKAGE_shadowsocksr-libev-ssr-check is not set
+# CONFIG_PACKAGE_simple-obfs-client is not set
+# CONFIG_PACKAGE_trojan is not set
 CONFIG_PACKAGE_trojan-plus=y
-CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_v2ray-plugin=y
 # CONFIG_PACKAGE_wsdd2 is not set
 CONFIG_PACKAGE_xray-geodata=y
 # CONFIG_PACKAGE_zerotier is not set
-CONFIG_TROJAN_GO_COMPRESS_UPX=y
-CONFIG_PACKAGE_boost-date_time=y
-CONFIG_PACKAGE_libnss=y
-CONFIG_PACKAGE_naiveproxy=y
-CONFIG_PACKAGE_nspr=y
-CONFIG_PACKAGE_shadowsocksr-libev-ssr-check=y
-CONFIG_PACKAGE_trojan=y
+CONFIG_SQLITE3_DYNAMIC_EXTENSIONS=y
+CONFIG_SQLITE3_ENABLE_COLUMN_METADATA=y
+CONFIG_SQLITE3_FTS3=y
+CONFIG_SQLITE3_FTS4=y
+CONFIG_SQLITE3_FTS5=y
+CONFIG_SQLITE3_JSON1=y
+CONFIG_SQLITE3_RTREE=y
