--- a/.config
+++ b/.config
@@ -7,6 +7,7 @@ CONFIG_NODEJS_ICU_SMALL=y
 # CONFIG_PACKAGE_boost-date_time is not set
 CONFIG_PACKAGE_coreutils-nohup=y
 CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4=y
+CONFIG_PACKAGE_fuse-utils=y
 CONFIG_PACKAGE_gowebdav=y
 CONFIG_PACKAGE_haproxy=y
 CONFIG_PACKAGE_hd-idle=y
@@ -17,6 +18,7 @@ CONFIG_PACKAGE_libbz2=y
 CONFIG_PACKAGE_libexif=y
 CONFIG_PACKAGE_libffmpeg-audio-dec=y
 CONFIG_PACKAGE_libflac=y
+CONFIG_PACKAGE_libfuse=y
 CONFIG_PACKAGE_libid3tag=y
 CONFIG_PACKAGE_libjpeg-turbo=y
 CONFIG_PACKAGE_libltdl=y
@@ -33,10 +35,12 @@ CONFIG_PACKAGE_luci-app-hd-idle=y
 CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 CONFIG_PACKAGE_luci-app-minidlna=y
 CONFIG_PACKAGE_luci-app-passwall=y
+CONFIG_PACKAGE_luci-app-rclone=y
 # CONFIG_PACKAGE_luci-app-samba is not set
 CONFIG_PACKAGE_luci-app-serverchan=y
 # CONFIG_PACKAGE_luci-app-ssr-plus is not set
 CONFIG_PACKAGE_luci-app-unblockneteasemusic=y
+CONFIG_PACKAGE_luci-app-upnp=y
 # CONFIG_PACKAGE_luci-app-zerotier is not set
 CONFIG_PACKAGE_luci-i18n-gowebdav-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-hd-idle-en=y
@@ -44,13 +48,20 @@ CONFIG_PACKAGE_luci-i18n-hd-idle-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-minidlna-en=y
 CONFIG_PACKAGE_luci-i18n-minidlna-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-rclone-en=y
+CONFIG_PACKAGE_luci-i18n-rclone-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-upnp-en=y
+CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
 CONFIG_PACKAGE_luci-theme-argon-dark-mod=y
 CONFIG_PACKAGE_minidlna=y
+CONFIG_PACKAGE_miniupnpd=y
 CONFIG_PACKAGE_node=y
 CONFIG_PACKAGE_node-request=y
+CONFIG_PACKAGE_rclone=y
+CONFIG_PACKAGE_rclone-ng=y
+CONFIG_PACKAGE_rclone-webui-react=y
 # CONFIG_PACKAGE_samba36-server is not set
 # CONFIG_PACKAGE_shadowsocksr-libev-ssr-check is not set
-# CONFIG_PACKAGE_simple-obfs-client is not set
 # CONFIG_PACKAGE_trojan is not set
 CONFIG_PACKAGE_trojan-plus=y
 CONFIG_PACKAGE_unzip=y
